# tach_cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  roadmap.md  start-work.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: config.md  design.md  dev.md  usage.md
examples/: conf.toml
src/tach_cli/: __main__.py  app.py  cli.py  config.py  models.py
tests/: test_config.py  test_imports.py
