[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "tach-cli"
version = "0.0.0"
description = "A production-focused terminal clock + countdown timer for live events."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Beau Bremer" }]
dependencies = [
  "typer>=0.12",
  "rich>=13.0",
  "textual>=0.50",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pre-commit>=3.7",
  "ruff>=0.6",
]

[project.scripts]
tach = "tach_cli.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["dist", "build", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
